--- a/src/main/resources/templates/fragments/right_sidebar.html
+++ b/src/main/resources/templates/fragments/right_sidebar.html
@@ -141,7 +141,7 @@
         </div>
 
         <div class="user-actions">
-          <a class="user-btn" th:href="@{/member/profile}">회원 정보</a>
+          <a class="user-btn" th:href="@{/login/memberinfo}">회원 정보</a>
 
           <form th:action="@{/login/logout}" method="post">
             <button type="submit" class="user-btn">로그아웃</button>
