코멘트 작성 완성, 게시글 작성 수행중

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -529,7 +529,7 @@
               </a>
             </div>
 
-            <a class="btn-write" th:href="@{/post/new}">글쓰기</a>
+            <a class="btn-write" th:href="@{/board/new}">글쓰기</a>
           </div>
         </section>
       </main>
