--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -580,7 +580,7 @@
               method="post"
             >
               <textarea
-                name="content"
+                name="contents"
                 placeholder="댓글을 입력하세요."
                 required
               ></textarea>
